# CSV-Explorer

./: .gitignore  AGENTS.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  Info.plist.in  LICENSE  Makefile  README.md  config.h  config.h.in
.github/workflows/: ci.yml
assets/: csv-explorer.rc  csv-explorer.rc.in  wxcsv.icns  wxcsv.rc
cmake/toolchains/: mingw-x86_64.cmake
scripts/: build-mingw64-windows.sh
src/: about_dialog.cpp  about_dialog.h  csv_explorer_png_data.h  go_to_row_dialog.cpp  go_to_row_dialog.h  main.cpp  main_frame.cpp  main_frame.h  print_preview_frame.cpp  print_rendering.cpp  print_support.cpp  print_support.h  print_support_internal.h  sqlite_dialog_common.cpp  sqlite_dialog_common.h  sqlite_export_dialog.cpp  sqlite_import_dialog.cpp  sqlite_import_dialog.h  unsaved_changes_dialog.cpp  unsaved_changes_dialog.h  wxcsv_png_data.h
